# google-cognitive-apis

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.github/workflows/: github-actions-rust-ci.yml
examples/: README.md  a.rs  recognizer.rs  recognizer_async.rs  recognizer_long_running.rs  recognizer_streaming.rs  recognizer_streaming2.rs  recognizer_streaming_async_stream.rs  recognizer_sync.rs  sessions_client_detect_intent.rs  sessions_client_streaming_detect_intent.rs  sessions_client_streaming_detect_intent_async_stream.rs  synthesizer.rs
res/certs/: README.md
src/: api.rs  common.rs  dialogflow.rs  errors.rs  lib.rs  speechtotext.rs  texttospeech.rs
src/api/: grpc.rs  rest.rs
src/api/rest/google/: cloud.rs
src/api/rest/google/cloud/: speechtotext.rs
src/api/rest/google/cloud/dialogflow/v2/: session.rs
src/api/rest/google/cloud/speechtotext/: v1.rs  v1p1beta1.rs
src/api/rest/google/cloud/texttospeech/: v1.rs
src/dialogflow/: sessions_client.rs  sessions_client_streaming.rs
src/grpc_stubs/: google.api.rs  google.cloud.dialogflow.cx.v3.rs  google.cloud.dialogflow.cx.v3beta1.rs  google.cloud.dialogflow.v2.rs  google.cloud.dialogflow.v2beta1.rs  google.cloud.speech.v1.rs  google.cloud.speech.v1p1beta1.rs  google.cloud.texttospeech.v1.rs  google.cloud.texttospeech.v1beta1.rs
src/grpc_stubs/dialogflow_cx/: google.api.rs  google.cloud.dialogflow.cx.v3.rs  google.cloud.dialogflow.cx.v3beta1.rs  google.longrunning.rs
src/speechtotext/: recognizer.rs  recognizer_beta.rs
src/texttospeech/: synthesizer.rs
tests/: integration_test.rs
