[package]
name = "google-cognitive-apis"
version = "0.1.4"
authors = ["Adam Bezecny <adam.bezecny@gmail.com>"]
edition = "2018"
description = "Library wrapping Google speech-to-text, text-to-speech and dialogflow APIs. Provides high level API layer wrapping the underlying complexity of GRPC."
license = "MIT OR Apache-2.0"
keywords = ["speech", "google", "cognitive", "recognition", "synthesizing"]
categories = ["multimedia", "multimedia::audio", "text-processing"]
exclude = [
    "examples/*"
]
repository = "https://github.com/jabber-tools/google-cognitive-apis/"
documentation = "https://docs.rs/google-cognitive-apis/0.1.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.0"
prost-types = "0.11.1"
tonic = { version = "0.8.0", features = ["transport", "tls"] }
serde = "1.0.144"
serde_json = "1.0.85"
serde_path_to_error = "0.1.8"
log = "0.4.17"
gouth = "0.2.1"
tokio = { version = "1.20.1", features = ["rt-multi-thread"] }
tokio-stream = "0.1.9"
async-stream = "0.3.3"
futures-core = "0.3.23"

[build-dependencies]
tonic-build = "0.8.0"

[dev-dependencies]
env_logger = "0.9.0"
futures-util = "0.3.23"

[features]
default = [
    "speech-to-text",
    "text-to-speech",
    "dialogflow",
]

google-cloud-texttospeech-v1 = []
google-cloud-texttospeech-v1beta1 = []

google-cloud-speechtotext-v1 = []
google-cloud-speechtotext-v1p1beta1 = []

google-cloud-dialogflow-v2 = []
google-cloud-dialogflow-v2beta1 = []
google-cloud-dialogflow-cx-v3 = []
google-cloud-dialogflow-cx-v3beta1 = []

speech-to-text = [
    "google-cloud-speechtotext-v1",
    "google-cloud-speechtotext-v1p1beta1",
]

text-to-speech = [
    "google-cloud-texttospeech-v1",
    "google-cloud-texttospeech-v1beta1",
]

dialogflow = [
    "google-cloud-dialogflow-v2",
    "google-cloud-dialogflow-v2beta1",
    "google-cloud-dialogflow-cx-v3",
    "google-cloud-dialogflow-cx-v3beta1",
]
